tests/NormalTests/paczka1/small_fuzzy/68400157.err
Error in line 2: RLrQ0 S780 97,1
Error in line 5: ZEYHxle S780 99,0
